--- a/_posts/0000-01-02-wasique906.md
+++ b/_posts/0000-01-02-wasique906.md
@@ -2,5 +2,5 @@
 layout: slide
 title: "Welcome to our first slide!"
 ---
-testing your files
+testing your files successfully
 Use the left arrow to go back!
